# ChangeLog for net-nds/389-ds-base
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nds/389-ds-base/ChangeLog,v 1.29 2014/11/02 09:20:03 swift Exp $

  02 Nov 2014; Sven Vermeulen <swift@gentoo.org> 389-ds-base-1.3.0.2-r1.ebuild:
  Remove sec-policy/selinux-* dependency from DEPEND but keep in RDEPEND (bug
  #527698)

  26 Jun 2014; Michael Palimaka <kensington@gentoo.org>
  -389-ds-base-1.3.0.2.ebuild, -files/389-ds-base-1.2.11.16-cve-2012-4450.patch,
  -files/selinux.patch:
  Remove old.

  22 Jun 2014; Fabio Erculiani <lxnay@gentoo.org> metadata.xml:
  reset to maintainer-needed@

  04 Mar 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  389-ds-base-1.3.0.2.ebuild, 389-ds-base-1.3.0.2-r1.ebuild:
  Add subslot dependency on dev-libs/icu

*389-ds-base-1.3.0.2-r1 (22 Aug 2013)

  22 Aug 2013; Sven Vermeulen <swift@gentoo.org>
  +389-ds-base-1.3.0.2-r1.ebuild:
  Fix bug #445484 - move SELinux policy into selinux-dirsrv and depend on that

*389-ds-base-1.3.0.2 (14 Mar 2013)

  14 Mar 2013; Fabio Erculiani <lxnay@gentoo.org> +389-ds-base-1.3.0.2.ebuild,
  -389-ds-base-1.2.11.15.ebuild:
  version bump, fixes bug #461522

*389-ds-base-1.2.11.15 (02 Oct 2012)

  02 Oct 2012; Fabio Erculiani <lxnay@gentoo.org> 389-ds-base-1.2.11.15.ebuild:
  inherit user eclass

  02 Oct 2012; Fabio Erculiani <lxnay@gentoo.org>
  +389-ds-base-1.2.11.15.ebuild,
  +files/389-ds-base-1.2.11.16-cve-2012-4450.patch,
  +files/389-ds-base-1.2.11-fix-mozldap.patch, -389-ds-base-1.2.8.3.ebuild,
  -389-ds-base-1.2.9.6.ebuild:
  version bump, closes #405127, #428178, #436768

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> 389-ds-base-1.2.8.3.ebuild,
  389-ds-base-1.2.9.6.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*389-ds-base-1.2.9.6 (14 Aug 2011)

  14 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> +389-ds-base-1.2.9.6.ebuild:
  version bump

  13 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> 389-ds-base-1.2.8.3.ebuild,