@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX 389-ds-base-1.2.11-fix-mozldap.patch 789 SHA256 55e33e366ad13c22a00a8255ea34fb84786f2d3308ba1cab74b92684897bbdc5 SHA512 30e3fe84d8d5d380e80ccb19cebd73271b540caef61770514f43c3097e34d133cefdbb5abec3ccd25ad7a46df380719c0ce8fa7b10185091f236f622850ebfa4 WHIRLPOOL 271a2f16a52bc599391d167499aad0f2f9658def2becf35e6364b9125cd9c8d2cd33a8bb41c4c7b16ea3a48dec0de786f0059950f1b3a6a172b6cd4881a784d5
 AUX 389-ds-snmp.initd 1076 SHA256 0dccceef42e29b5f696fc241cccdb3641eca3d8e300aef13b13ba1a40f8382e1 SHA512 0e2a6a8519a82d25cc96c0f5b26e9a53e7a56ddd9b842ff830535628d5f55a3eb662cf4d1c93d49fa66176249866a1ed21461ccd7e920869a95297ca5197db8c WHIRLPOOL dcc8efb767eb7d4044424967b26b93d88b827f652146eaabcc5c105ea373ae02d1a89ab0e61057496eec220e8c0111599099ec711d28e61f61e19008dfe775bb
@@ -7,23 +7,25 @@ AUX 389-ds.initd 1995 SHA256 722f0c18f21ccb60054433e62748008ffd908d026220be4f705
 AUX restart-dirsrv 581 SHA256 fd0dfbce5d74b065fc1bef6e11527d56c7fc4f16ae55383841c05d35d03173b2 SHA512 c8b2168977a1884baa35f78ba9a065bf3900413afcd5c38eba0f3695af6b4900785430ec61e34479a22b6888334a46e6c3796e15866a37969497033a9cbdee6e WHIRLPOOL 81ace8c577aeb931d2bda9bacd1ff9b9389c9d6d0ccdbd53867686d0fd3e3bd9bc4bf1965231dcb7803a16fa6e3f438daf54bb569e7a81062f84fc71e3e278f3
 AUX start-dirsrv 303 SHA256 d29272f92d2c4420da8aad7919861ab667c8f224bde560491f1626957418d361 SHA512 0a150045099e367ed54a3bf9319f3a608ea9b967f13e6f29aac7d3f6ca2e39edc2d8f843bab9a2c7cb93d8d175a8a34e6c0ad1a0dd1a586cf4141a1dcd3d37d6 WHIRLPOOL 936fc295e75ab18e5207eb2fe2eea42eef3807321f3ff526bbc4f4d8d4ef79b0ff8a09b676d7a993c76efb6da8fab3365b085f682d1a0e615092b8bd0b67a6c5
 DIST 389-ds-base-1.3.0.2.tar.bz2 3008002 SHA256 0482f8cddbb32dc44051d59efe085eb744295a32eac65fbcd0b1bfd807319755 SHA512 99d41e2df832eaf8d83ec32fd9e7ef1819d75640fae2c69e62f5d11998c29d780726cb5d97cec7a6ae410c440d5124ca8b9d0cb7091a437a57f2625b16fca29f WHIRLPOOL 8ad72341e15d05e6af0999808a1930f11c7589c211424f7dfa68c1d8d5cd18657086dbf9aa6c856dc84a3926b47ed46484b30e6f72819a22e26277a3c504c1e0
-EBUILD 389-ds-base-1.3.0.2-r1.ebuild 4658 SHA256 052036339768d2d719d758a07a7ebc16541135ee344e89fbafaa838103c70fe5 SHA512 072eced088c507b91480d6dbd4b0b6c6de7b8567689fe1cb4971c949513002090a8686b374f690499d0dc13527395f9a811ec2971f4a343317c54748920c2a6c WHIRLPOOL bcceb55f40db26164aaade698c645dd25ba8e96e27e7e9a5f44d410da0d9c001f213069c27f71a87fa36c871085a394cf99b8ffc3d87f1ba9139b7bbeeff9db6
-MISC ChangeLog 5743 SHA256 6f9baa80cf74d0e2bc53dbacaf50e840a4cf898a96ca6f6963774e42ebc39136 SHA512 3edbe94e578b2ae49cc319c87464cecf0e5e1216e3ad50dea1f57b98d29838520a0c4e43eae426918e2b9e73b0501a195c0d5e346355ef592e8e120036bc2a96 WHIRLPOOL 9a3c1cf4bd0d80c432e8328a5ddf7024c5513445ee9aba196166734c4961af5cb479989ca263384e70e5f07a9d1eac26acc6a3cad250e18815ceccb2694dbd25
+EBUILD 389-ds-base-1.3.0.2-r1.ebuild 4534 SHA256 325fd8c83ad3305c0d402bd68d99a4a4e100a3b5e8f339d624994ba00298b109 SHA512 49dfb6122494099386f9884895f75aeb0fcb2bc8e3701c18fce536ddcfe9c0e7b91d812261f09ac28ac72c971f7b24c673f30fecca4ce92e34e284bc51be8b20 WHIRLPOOL 39aea5c875322043edbba0c4dd6e2df919335b28bf4a5591844ae21bfbba2711211a45d7098f84baee945251ca36db00b7767e336dbe3019d55668fc6af60e0a
+MISC ChangeLog 5873 SHA256 6d19b6275315bd4ec653fb780b8f4042a6f03ae616b54fe5036052080e38fb2e SHA512 44838bf74cab477bed20306ebc5b676bcf3be78885b9b1ce2752dd93ec92274949dd2a0f095d6823dd033094f3caf3342aa4dde908a4fae55ab36a7dee1e505b WHIRLPOOL 313ca7b73de31ad9a2be8782e6a6d9337f0f52cac6d16930460710477a9c6b529654f48623b8981fd3b3d07dc6bf9e6b038066960cf0999b596ea17d513c47c3
 MISC metadata.xml 1060 SHA256 3a6fc0dfd206f258e92e1c47eb5dd45f9ef3937e5e3a59837ac112faac7b8fd8 SHA512 b082b570a1a40f75fb905a7df83d107c6873dff55700705999cfe44df3bb121eb424a114d901c05117b6139b8c600066837f2462d75386950a1ba3ca749689d2 WHIRLPOOL a512aa0403de62957e07bd936e216752071ec1e20be035553deebebe3b80ba68d34e3c6842062c5aeffb2090a98cd9bf2f2fd1644fa82c19aadd8efa72fb4ca3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJUVfdEAAoJEC7dUkA7aK9HYyIP/jmtiAEzeVSZmi+m9tMGnRFh
-GNtrAbuM6sSxeflFKsrSRl4Hi5t/oG2Tlo5sMfFWTBmaC+hJ+NQiDSM90wPa1CIt
-nXICGuVGOLNGXewIRrOlMepFKH282WmnM81fMhAKVBIKOJClfy3xidoA/MOfpnbW
-CrDMbH1QZmt0qtGlEORdAZSfUzUviyBXuyIlHxqP8ymoxGTm+NshnJmJBOIJyH5y
-yPcxWvMxtGvcCe/evkZKQtktoCOgYniNhkGz7+gyT6DPikUvO2eswlV7QX97FRP0
-NY6O6iHUnJ0MtEmo9jvrDz49gQ2/L6tGXcewx4njNr4uBIf37M0srj7nwsMa+15m
-n6JFUuqm/klJbS99utSUvoJm85+Ti/kjNLIkAT43HtIePH+54hfV0lnfXG87rPvB
-FsJWdEKG+05VLjdmA09rGi+ffVDil2uLNkWn6ROBrAL0mPL26/dkqJViDvHBdpSZ
-zHYNkCCbJoXP8khio6AvRxjAlDsThqQZccMS7NqPf7Dt7+hkytzVLW2q9siFiJxk
-2U5wwv0ioKVOXb5zvKOg+hd9ck4EaVmFD7knl9H2PU0h2oi8SgT4beNh3MBOdjxL
-qSkr85H+PlbHK+RRZjEX020STAN+1HTK2TR+r26QItnmGc/w1Hr86UFpBVu9GCCq
-96MSHmrmL4LQVUEh9tzH
-=X6Sa
+iQJ8BAEBCgBmBQJVDebLXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirpqsP/RNSRpBCoQX5Jhq6QS+zK5UE
+p/WE2j1zreYjQ30WtxlrEcN5IsqHkk0tlhc6dxunZPE0IFYEXQsPlyee/ziTP0KB
+f7kltPA7saGlSoT84jK0qaqt729qeHiBzOmEZ4QH0EdPqTauZH591ErHAeZKv+MK
+2HUOtxgNp1JrsCH5KBU9G6/UKFy2zgG+cLLilLutjXH7SLyxhALnAdywT6oped8z
+VH4ShSm8V3Qvbb/f7otylPQQUASs8vFaGap3gxq/E4Hoyo6Oir1N7HKZZyOt76DW
+2YplKRar3tFGInCYsqZoBp9Ky0HSt1WWy6O+V4u4aVETbcISy4GjKaYHCtB9TDsN
+txo3Kk2Ipq7ccRspAEEIdiQCavZw/4K77NuDHQqWSBVXQWULwd7383PLU910gLS1
+jS8bmsovDC36o1EPqk43DTQWYYxcCT8V849g6Vz4sYL4sPnU7lyvys62Y55yz610
+XRHxt4MQM/yASYKDDpSx+8qXOiE4jlZYrh7Efp111bDxzMOcIQLwLoGgQ8eYnIpp
+66G22dY2tgkKtplMpV0AsvWVaHFge2UanCYbCLWlAIfuwZ8zJwynXdoov6voVJj2
+HAcUA/Mg94LvFQ3DHTPa+ocyuKoBOI2Iq6X+0axtTy+zyRAEi2vHw9I+77yaqVDC
+NGN443TRY5k9XLHnxLSz
+=eIz/
 -----END PGP SIGNATURE-----
