@@ -1,6 +1,9 @@
 # ChangeLog for net-nds/389-ds-base
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/389-ds-base/ChangeLog,v 1.29 2014/11/02 09:20:03 swift Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-nds/389-ds-base/ChangeLog,v 1.30 2015/03/21 21:46:42 jlec Exp $
+
+  21 Mar 2015; Justin Lecher <jlec@gentoo.org> 389-ds-base-1.3.0.2-r1.ebuild:
+  use dosbin instead of exeinto /usr/sbin/ && doexe
 
   02 Nov 2014; Sven Vermeulen <swift@gentoo.org> 389-ds-base-1.3.0.2-r1.ebuild:
   Remove sec-policy/selinux-* dependency from DEPEND but keep in RDEPEND (bug
